--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "hardhat": "^2.12.6"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.6.0"
   }
 }
